fixed title alignment but issue with drawer icon

--- a/client/main.css
+++ b/client/main.css
@@ -179,14 +179,16 @@ button.ui.button.it-edit {
 }
 
 #itinerary-name {
-    display: inline-block;
+    display: block;
     margin-top: 24px;
     margin-left: 24px;
-    vertical-align: bottom;
+    /* vertical-align: bottom; */
 }
 
 .it-header {
     vertical-align: bottom;
+    /* clear: both; */
+    display: inline-block;
 }
 
 .event-block {
